[gd_scene load_steps=10 format=3 uid="uid://dycxgvkx8y81j"]

[ext_resource type="Script" path="res://scripts/mini_games/sword_swallowing.gd" id="1_qsmtj"]
[ext_resource type="Texture2D" uid="uid://cd027twlfcwkh" path="res://assets/graphics/person_first_half.png" id="2_buklk"]
[ext_resource type="Texture2D" uid="uid://cpe2a0dl1hrq4" path="res://assets/graphics/person_second_half.png" id="3_3cc02"]
[ext_resource type="Texture2D" uid="uid://dgdna6r8sqirc" path="res://assets/graphics/Sword.png" id="4_uwae8"]
[ext_resource type="PackedScene" uid="uid://bcb2f8o11jadh" path="res://scenes/ui/submenu.tscn" id="5_ynnyw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81lca"]
size = Vector2(237.127, 872.983)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pffmh"]
size = Vector2(264.22, 718.678)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnmmk"]
size = Vector2(65.9865, 866.688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3iy4"]
size = Vector2(120.484, 97.2329)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qsmtj")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-8, 70)
scale = Vector2(0.473091, 0.473091)

[node name="firstHalf" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_buklk")

[node name="Area2D" type="Area2D" parent="Node2D/firstHalf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/firstHalf/Area2D"]
position = Vector2(-209.069, 102.517)
shape = SubResource("RectangleShape2D_81lca")

[node name="secondHalf" type="Sprite2D" parent="Node2D"]
texture = ExtResource("3_3cc02")

[node name="Area2D" type="Area2D" parent="Node2D/secondHalf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/secondHalf/Area2D"]
position = Vector2(166.987, 183.897)
rotation = -0.0386541
shape = SubResource("RectangleShape2D_pffmh")

[node name="sword" type="Sprite2D" parent="Node2D"]
position = Vector2(-40.1614, -900.461)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_uwae8")

[node name="Area2D" type="Area2D" parent="Node2D/sword"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/sword/Area2D"]
position = Vector2(6.78066, 142.062)
rotation = -0.0140919
shape = SubResource("RectangleShape2D_tnmmk")

[node name="Success Area" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Success Area"]
position = Vector2(-24.3082, 481.937)
shape = SubResource("RectangleShape2D_e3iy4")

[node name="Tutorial" parent="." instance=ExtResource("5_ynnyw")]
process_mode = 3
visible = false
text_content = "[center][b]Sword Swallowing[/b][/center]

[center]Click and drag the sword till its all the way inside the throat but don't let it touch the sides!!!  [/center]"

[connection signal="area_entered" from="Node2D/firstHalf/Area2D" to="." method="_on_first_area_entered"]
[connection signal="area_entered" from="Node2D/secondHalf/Area2D" to="." method="_on_second_area_entered"]
[connection signal="mouse_entered" from="Node2D/sword/Area2D" to="." method="_on_sword_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/sword/Area2D" to="." method="_on_sword_mouse_exited"]
[connection signal="area_entered" from="Node2D/Success Area" to="." method="_on_success"]
[connection signal="close_requested" from="Tutorial" to="." method="hide_tutorial"]
